# accelerate-fft

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  README.md  accelerate-fft.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
Data/Array/Accelerate/Math/: Complex.hs  DFT.hs  FFT.hs
Data/Array/Accelerate/Math/DFT/: Centre.hs  Roots.hs
Data/Array/Accelerate/Math/FFT/: Adhoc.hs  CUDA.hs  Mode.hs  Twine.hs
Data/Array/Accelerate/Math/FFT/LLVM/: Native.hs  PTX.hs
cubits/: twine_f32.cu  twine_f64.cu  twine_f64.ptx
icebox/: CUDA.hs  Twine.hs  travis.yml
icebox/Native/: Twine.hs
icebox/PTX/: Twine.hs
icebox/cbits/: twine_f32.c  twine_f64.c
icebox/cubits/: twine_f32.cu  twine_f32.ptx
src/Data/Array/Accelerate/Math/: DFT.hs  FFT.hs
src/Data/Array/Accelerate/Math/DFT/: Centre.hs  Roots.hs
src/Data/Array/Accelerate/Math/FFT/: Adhoc.hs  Elt.hs  Mode.hs  Twine.hs  Type.hs
src/Data/Array/Accelerate/Math/FFT/LLVM/: Native.hs  PTX.hs
src/Data/Array/Accelerate/Math/FFT/LLVM/Native/: Base.hs  Ix.hs  Twine.hs
src/Data/Array/Accelerate/Math/FFT/LLVM/PTX/: Base.hs  Plans.hs  Twine.hs
test/: TestNative.hs  TestPTX.hs
test/Test/: Base.hs  FFT.hs  ShowType.hs
