Name:                   accelerate-fft
Version:                0.13.0.0
Cabal-version:          >= 1.6
Tested-with:            GHC >= 7.4
Build-type:             Simple

Synopsis:               FFT using the Accelerate library
Description:
  Rank-polymorphic discrete Fourier transform (DFT), computed with a fast
  Fourier transform (FFT) algorithm using the Accelerate library
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>
  .

License:                BSD3
License-file:           LICENSE
Author:                 Manuel M T Chakravarty,
                        Gabriele Keller,
                        Trevor L. McDonell
Maintainer:             Manuel M T Chakravarty <chak@cse.unsw.edu.au>
Homepage:               https://github.com/AccelerateHS/accelerate-fft
Bug-reports:            https://github.com/AccelerateHS/accelerate/issues

Category:               Compilers/Interpreters, Concurrency, Data
Stability:              Experimental

Flag cuda
  Description:          Enable support for using CUFFT via the CUDA backend's
                        FFI
  Default:              True

Library
  Build-depends:        accelerate      == 0.13.*,
                        base            == 4.*

  Exposed-modules:      Data.Array.Accelerate.Math.Complex
                        Data.Array.Accelerate.Math.FFT
                        Data.Array.Accelerate.Math.DFT
                        Data.Array.Accelerate.Math.DFT.Centre
                        Data.Array.Accelerate.Math.DFT.Roots

  ghc-options:          -O2 -Wall -funbox-strict-fields

  if flag(cuda)
    CPP-options:        -DACCELERATE_CUDA_BACKEND
    Build-depends:      accelerate-cuda                 >= 0.13,
                        cuda                            >= 0.5,
                        cufft                           >= 0.1

  Extensions:           FlexibleInstances
                        IncoherentInstances
                        ScopedTypeVariables
                        TypeOperators
                        TypeSynonymInstances

Source-repository head
  Type:                 git
  Location:             git://github.com/AccelerateHS/accelerate-fft.git

